--- a/app/src/main/res/anim/mixed_anim.xml
+++ b/app/src/main/res/anim/mixed_anim.xml
@@ -21,7 +21,7 @@
         android:fromDegrees="0"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:repeatCount="3"
+        android:repeatCount="infinite"
         android:repeatMode="restart"
         android:toDegrees="360" />
 
